--- a/css/essays.css
+++ b/css/essays.css
@@ -1,10 +1,3 @@
-.site-footer {
-    margin-top: 1040px; /* THIS pushes it to the bottom */
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 20px;
-  }
 
   .card-container{
     display: flex;
