--- a/css/game-dev.css
+++ b/css/game-dev.css
@@ -1,10 +1,4 @@
-.site-footer {
-    margin-top: 480px; /* THIS pushes it to the bottom */
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 20px;
-  }
+
 
   body{
     background-color: #ffffff;
