--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,7 @@
 
 #featured-works {
     color: #000000;
-    min-height: 100vh;
+    min-height: 80vh;
     background-color: rgb(255, 255, 255); /* White background */
     padding: 50px 20px; /* Optional: adds space around the content */
 
